// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormHelperText > should render error message 1`] = `
<DocumentFragment>
  <p
    class="text-theme-danger-500 text-sm font-normal"
  >
    Error Message
  </p>
</DocumentFragment>
`;

exports[`FormHelperText > should render hint text 1`] = `
<DocumentFragment>
  <p
    class="text-theme-secondary-500 text-sm font-normal"
  >
    Test Message
  </p>
</DocumentFragment>
`;
